--- a/src/main/webapp/include/freelancer/freelancermain.xhtml
+++ b/src/main/webapp/include/freelancer/freelancermain.xhtml
@@ -720,12 +720,11 @@
                     <h:column>
                         <b:gridBagLayout cols="220,160,220" rows="20,p,p">
                             <b:cell x="2" y="2" align="center">
-                                <h:commandLink title="#{row.infotext}"
-                                               onclick="#{freelancerBackingBean.profileOpenCommand}">
+                                <a title="#{row.infotext}" href="#{freelancerBackingBean.profileOpenLink}">
                                     <h:graphicImage value="/images/word.gif" rendered="#{row.wordProfile}"/>
                                     <h:graphicImage value="/images/textfile.png" rendered="#{row.textProfile}"/>
                                     <h:graphicImage value="/images/word.gif" rendered="#{row.otherFormat}"/>
-                                </h:commandLink>
+                                </a>
                             </b:cell>
                             <b:cell x="2" y="3" align="center">
                                 <h:outputText value="#{row.name}"/>
