Tests with JSF 1.2

--- a/src/main/webapp/include/freelancer/freelancermain.xhtml
+++ b/src/main/webapp/include/freelancer/freelancermain.xhtml
@@ -685,7 +685,7 @@
                     </b:cell>
                     <b:cell x="4" y="14">
                         <b:combobox
-                                value="#{freelancerBackingBean.data.entity.kreditorNeu}" id="kreditornr"
+                                value="#{freelancerBackingBean.data.entity.kreditorNr}" id="kreditornr"
                                 values="#{freelancerBackingBean.data.kreditorNr}"
                                 labelComponentId="typ_kreditor"
                         />
