Some Bug-Fixing

--- a/src/main/webapp/include/freelancer/freelancermain.xhtml
+++ b/src/main/webapp/include/freelancer/freelancermain.xhtml
@@ -681,7 +681,7 @@
                     </b:cell>
 
                     <b:cell x="2" y="14">
-                        <b:label id="kreditor_label" label="Kreditor"/>
+                        <b:label id="kreditor_label" label="Kontaktart"/>
                     </b:cell>
                     <b:cell x="4" y="14">
                         <b:combobox
